# hyperstate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  alembic.ini  app.db  docker-compose.yml  manifest  pyproject.toml  test.html
.beads/: config.yaml  metadata.json
alembic/: env.py
alembic/versions/: 270b740e907c_add_curriculum_tables.py  b94e4e98cfad_add_weekplan.py  c5e1a9d3f7b2_add_shopping.py  f3a9d2c6b1e8_add_recipes.py
app/: main.py
app/domain/: errors.py
app/hyperstate/: dependencies.py  display.py  middleware.py
app/infrastructure/: database.py
app/web/: client.html  deps.py
deploy/keycloak/: realm-mealplan.json
deploy/postgres/: init-databases.sql
docs/: AUTH.md  ERRORS.md  PROTOCOL.md  SCAFFOLD.md
hyperstate/: __init__.py  auth.py  fields.py  flash.py  forms.py  middleware.py  nav.py  response.py  sections.py
scripts/: generate_schema.py  hsclient.py
stories/: VALIDATION.md  create-curriculum.json  dashboard-defer-all.json  edit-existing-curriculum.json  instruction-days-download.json  lesson-defer.json  lesson-resources.json  navigation-smoke.json  order-browse.json  reports-instruction-days.json  student-lesson-complete.json  subject-browse.json  transcript-download.json  upload_work_file.json  upload_work_url.json
tests/: test_list_controls.py
tests/auth/: test_oidc.py
tests/domain/: test_recipe_aggregate.py  test_schedule.py  test_shopping_aggregate.py  test_themes.py  test_weekplan_aggregate.py
tests/integration/: test_auth_flow.py  test_ha_feed.py  test_schedule_ics.py  test_shopping.py
tests/projection/: test_calendar_week.py  test_dashboard.py  (+11 more)
(+150 files in other folders)
